# promaia-py

./: .cursorignore  .dockerignore  .env.example  .gitignore  BUG_FIX_FEED_MODE.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  NOTION_SETUP_BACKPORT 2.md  Procfile  README.md  RULES.md  TUI_WORKING.md  docker-compose.dev.yml  docker-compose.pilots.yaml  docker-compose.prod.yml  docker-compose.yml  install.bat  install.ps1  install.sh  maia-data  maia.bat  maia.sh  mcp_servers.json.template  migrate-data.sh  promaia.config.template.json  pyproject.toml  render.yaml  requirements-calendar.txt  requirements.txt  scaffold 2.sh  scaffold.sh  setup.py  slack_manifest 3.json  slack_manifest.json  test_daemon_loop.py  test_feed_mode_lifecycle.py  test_tui_imports.py
.github/: PULL_REQUEST_TEMPLATE.md
conf/: README 2.md  cms 4.json
deprecated_tui_2026-02-09/: chat_commands.py  chat_mode.py  chat_session.py
docs/: 2026-03-17_GLACIER_PILOT_AUTOMATION_RESEARCH 4.md  2026-03-17_GOOGLE_OAUTH_PILOT_SETUP 2.md  AGENTIC_QUICK_START.md  AGENT_BRIDGE_QUICKSTART 3.md  AGENT_ORCHESTRATION_ARCHITECTURE.md  AGENT_SDK_BLOCKER_2025-12-22 4.md  AGENT_SDK_FINDINGS_2025-12-22 6.md  ARTIFACTS.md  CHANGELOG 6.md  CHUNKING_IMPLEMENTATION_SUMMARY 5.md  CONTENT_TYPE_INTEGRATION_GUIDE 4.md  CONTENT_TYPE_INTEGRATION_GUIDE.md  COPY_FRIENDLY_RICH 2.md  CRON_SETUP.md  DAEMON_SETUP.md  DEPLOYMENT.md  DEV_PROD_SETUP.md  DISCORD_INTEGRATION.md  DISCORD_MCP_ARCHITECTURE_2025-12-20.md  DUAL_VECTOR_SEARCH 2.md  DYNAMIC_SCHEMA_MIRRORING.md  EMAIL_FORMATTING_DEBUG_LOG 5.md  ENHANCED_FILTERING.md  (+47 more)
(+376 files in other folders)
